--- a/gb/21/7/23/n13110531.md
+++ b/gb/21/7/23/n13110531.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hckzak355/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hckzak355/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hckzak355/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hckzak355/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hckzak355/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hckzak355/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hckzak355/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】大陆居民五成肥胖 谁在赚胖子的钱</h2>
-
+<a href="https://d7b58bkqqk9ju.cloudfront.net/J9kH2vCar"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2021年07月23日讯】几天前，一条消息冲上了热搜，中国竟然有超一半的成年居民属于<ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E8%82%A5%E8%83%96.md#1">肥胖</a>。这个数据，来自中共国务院新闻办，在7月16日发布的2020年《中国居民营养与慢性病状况报告》，此外，在6到17岁的青少年中，有19%属于超重，而6岁以下儿童的肥胖率也有10.4%。</p>
-<p>还有数据显示，中国所有年龄段人群的平均BMI，就是身体质量指数，以及腰围都呈现出增长趋势。根据世卫的标准，中国<ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E8%82%A5%E8%83%96.md#1">肥胖</a>儿童的数量位居世界首位，中国成人的肥胖数量仅次于美国。</p>
+	<p>【大纪元2021年07月23日讯】几天前，一条消息冲上了热搜，中国竟然有超一半的成年居民属于<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%82%A5%E8%83%96.md#1">肥胖</a>。这个数据，来自中共国务院新闻办，在7月16日发布的2020年《中国居民营养与慢性病状况报告》，此外，在6到17岁的青少年中，有19%属于超重，而6岁以下儿童的肥胖率也有10.4%。</p>
+<p>还有数据显示，中国所有年龄段人群的平均BMI，就是身体质量指数，以及腰围都呈现出增长趋势。根据世卫的标准，中国<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%82%A5%E8%83%96.md#1">肥胖</a>儿童的数量位居世界首位，中国成人的肥胖数量仅次于美国。</p>
 <p>在30年前，1992年时，中国的肥胖人口大约是1.5亿，而到了2019年时，已经有将近5亿。</p>
 <p>那么，为什么中国肥胖超重的人数增长如此之快呢？是因为生活水平提高了，还是另有隐情？有关肥胖、瘦身的问题一直是个热门话题，很多朋友也很关心，所以，今天我们也和大家来聊一聊。</p>
-<p><a src="https://www.youmaker.com/embed/624726cd-1b15-4bbc-90ea-769eb47d91e9?r=16x9&amp;d=782" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<h2><ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E8%BF%87%E5%8A%B3.md#1">过劳</a>与<ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E7%84%A6%E8%99%91.md#1">焦虑</a>造成肥胖</h2>
+<p><a src=""></a><a href="https://d7b58bkqqk9ju.cloudfront.net/J9kH2vCar"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/624726cd-1b15-4bbc-90ea-769eb47d91e9?r=16x9&amp;d=782" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%87%E5%8A%B3.md#1">过劳</a>与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%84%A6%E8%99%91.md#1">焦虑</a>造成肥胖</h2>
 <p>我们先来看看，到底是什么原因让中国人越来越肥胖？</p>
-<p>目前的研究认为，<ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E7%84%A6%E8%99%91.md#1">焦虑</a>、压力会使皮质醇升高，皮质醇会刺激人体对糖分的摄取欲望，加重脂肪堆积，尤其是在腹部，时间长了，就会出现大腹便便的现象。现在有一种“工伤”，就叫做“<ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E8%BF%87%E5%8A%B3.md#1">过劳</a>肥”。</p>
+<p>目前的研究认为，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%84%A6%E8%99%91.md#1">焦虑</a>、压力会使皮质醇升高，皮质醇会刺激人体对糖分的摄取欲望，加重脂肪堆积，尤其是在腹部，时间长了，就会出现大腹便便的现象。现在有一种“工伤”，就叫做“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%BF%87%E5%8A%B3.md#1">过劳</a>肥”。</p>
 <p>很多996的上班族可能会注意到，本来是工作压力大，经常要熬夜，饮食也不规律，每天是从早忙到晚，但是，人不但没有累瘦，结果反倒累胖了，这就是“过劳肥”，也有朋友叫“压力胖”。</p>
 <p>而这个焦虑，似乎已经成了当下中国人的致命伤。要说中国正进入全民焦虑的时代，也绝不是危言耸听。</p>
 <p>应该大多数朋友，都有过焦虑的感受，包含着紧张、焦急、忧虑，还有担心和恐惧等等这些情绪，交织在一起。而现代人，焦虑和恐惧的根源，往往来自于对未来的不确定性，像是担心工作表现，担心人际关系，担心婚姻等。而中国人似乎担心的更多，担心房价、担心强拆，担心食品安全，担心医疗保险，担心孩子上学就业，担心金融诈骗等等，各种焦虑，似乎已经成了相当多中国人的一种普遍心态。</p>
@@ -20,8 +20,8 @@
 <p>而中国的富人们，虽然衣食无忧，但忧虑的事情却也不少，像是要考虑怎样维护和政府官员的关系；怎么配合监管又怎么才能拿到一些特权；怎么既能赚到钱，又能在政治上不站错队等。像去年的蚂蚁金服，现在的滴滴出行，这些知名企业的知名管理者，可能对焦虑二字，别有一番深刻体会。</p>
 <p>而在中共体制内当官的朋友们，一样要担心上下级关系、担心组织审查、担心政治风向等等，每一个明礁或是暗礁都有可能让他们仕途受挫。</p>
 <p>还有，各个行业的内卷化等等，都让更多中国人有了更多焦虑的理由，可能也因此，中国的肥胖人口也变得越来越多。当然，造成肥胖的原因有很多，饮食、遗传基因等等很多种因素，我们这里就不做讨论了。</p>
-<p>不过，不管是哪种肥胖，可能都会让人变得更加焦虑，而让人更焦虑的还有衍生出的问题，那就是<ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E5%87%8F%E8%82%A5%E5%B8%82%E5%9C%BA.md#1">减肥市场</a>处处设下的陷阱。</p>
-<h2><ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E5%87%8F%E8%82%A5%E5%B8%82%E5%9C%BA.md#1">减肥市场</a>的乱象</h2>
+<p>不过，不管是哪种肥胖，可能都会让人变得更加焦虑，而让人更焦虑的还有衍生出的问题，那就是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%87%8F%E8%82%A5%E5%B8%82%E5%9C%BA.md#1">减肥市场</a>处处设下的陷阱。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%87%8F%E8%82%A5%E5%B8%82%E5%9C%BA.md#1">减肥市场</a>的乱象</h2>
 <p>我们先来看看大陆的健身房，2012至2017年期间，健身房行业产值年均增长率为6.7%。</p>
 <p>传统健身房一般是通过预售一年，或者是三年、五年的健身卡来获取现金，继而不断开新店，寅吃卯粮，循环往复。但是，一旦出现经营问题，就会出现拖欠工资、闭店跑路的情况。</p>
 <p>比如总部位于南京的金吉鸟，一度是中国最大的连锁健身房品牌，巅峰时期在40多个城市开设了400多家健身房，拥有累计超过200万的会员。在2018年，大陆健身行业的老大“浩沙健身”爆雷之后，金吉鸟还曾经表示过愿意无偿接收浩沙的会员。</p>
@@ -58,48 +58,48 @@
 剪辑：曲歌<br />
 制图：R1<br />
 监制：文静<br />
-<ahref="https://github.com/hckzak355/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
+<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://bit.ly/3hvUfr7">http://bit.ly/3hvUfr7</a></p>
 <p>责任编辑：连书华</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hckzak355/djy/blob/master/gb/21/7/17/n13095856.md#1">【财商天下】卷烟厂内卷 大陆名校生抢当卷烟工</a></li>
-<li><a href="https://github.com/hckzak355/djy/blob/master/gb/21/7/20/n13102299.md#1">【财商天下】握有超级数据 滴滴被七部委追杀</a></li>
-<li><a href="https://github.com/hckzak355/djy/blob/master/gb/21/7/21/n13104855.md#1">【财商天下】昔日巨头变老赖 汇源果汁因何殒落</a></li>
-<li><a href="https://github.com/hckzak355/djy/blob/master/gb/21/7/23/n13108657.md#1">【财商天下】郑州洪水加爆炸 为何现极端灾难？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/17/n13095856.md#1">【财商天下】卷烟厂内卷 大陆名校生抢当卷烟工</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/20/n13102299.md#1">【财商天下】握有超级数据 滴滴被七部委追杀</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/21/n13104855.md#1">【财商天下】昔日巨头变老赖 汇源果汁因何殒落</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/23/n13108657.md#1">【财商天下】郑州洪水加爆炸 为何现极端灾难？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/hckzak355/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965227.md#1" target="_blank">林启山：刘义元卖妻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/8/n9819782.md#1" target="_blank">布拉格共产主义受难者纪念碑背后故事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403596.md#1" target="_blank">澳纽正义之声汇入全球反迫害之洪势</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/7/n13073680.md#1">【命理】年过50无子 命师算出他40岁早得一子</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/12/n13083124.md#1">对于邪灵“附体” 东西方文化如何对待？</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/15/n13091973.md#1">【未解之谜】 另类转世 亡夫化鸟续前缘</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/6/28/n13054240.md#1">【水浒传奇】神人传武功 奇女琼英梦中学艺</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/23/n13110570.md#1">【时事军事】中共底线被美军行动越踩越烂</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/23/n13110572.md#1">【古韵流芳】 岑参边塞诗 飞雪似梨花</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13107712.md#1">【新闻看点】暴雨仍肆虐河南 多少人魂断5分钟</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/20/n13102731.md#1">暴雨成灾 大陆48小时内第三座水坝溃堤</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13103768.md#1">视频(2)：黄河支流决口 惊天洪水吞没郑州</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13104384.md#1">【一线采访】 郑州路面数百处塌陷 民心恐慌</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13105460.md#1">57岁刘青云近照曝光 粉丝惊呼认不出</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/20/n13102805.md#1">吴奇隆刘诗诗结婚6年 友人爆夫妻俩互动模式</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13105251.md#1">吴尊用三年打造新家 依华人传统庆乔迁之喜</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13108051.md#1">河南洪灾魔咒？成龙党庆高唱《怒吼吧黄河》</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13108292.md#1">刘德华拍片慰问河南灾民 竟遭网民逼问捐款没</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/17/n13095397.md#1">中医3步抗老养颜 天天做去皱纹、让皮肤变年轻</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/10/n13080358.md#1">哈佛推荐的10大超级食物 好处不只是抗癌</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13103895.md#1">盘点世界各地知名品牌的辣椒酱（一）</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/21/n13103380.md#1">疫苗混打保护力更强？这组合或比2剂辉瑞效果好</a></li>
-<li><a href="https://github.com/reprsb3742/djy/blob/master/gb/21/7/22/n13106221.md#1">大脚怪抱孩子渡河？ 美国男子拍到奇特画面</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hckzak355/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hckzak355/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/23/n13110531.htm">【财商天下】大陆居民五成肥胖 谁在赚胖子的钱</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/23/n13110531.htm">【财商天下】大陆居民五成肥胖 谁在赚胖子的钱</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hckzak355/djy/blob/master/gb/21/7/23/n13110531.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hckzak355/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hckzak355/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hckzak355/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hckzak355/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hckzak355/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/23/n13110531.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
